--- a/markup/pages/popups/_layout.pug
+++ b/markup/pages/popups/_layout.pug
@@ -3,5 +3,6 @@ include ../../components/popup/popup
 include ../../components/select-city-popup/select-city-popup
 include ../../components/auth-popup/auth-popup
 include ../../components/popup-welcome/popup-welcome
+include ../../components/filter/filter
 
 block content
