--- a/markup/components/profile-video-popup/profile-video-popup.styl
+++ b/markup/components/profile-video-popup/profile-video-popup.styl
@@ -3,7 +3,7 @@
     align-self: center
     display: block
     max-width: 915px
-    width: 100%
+    width: auto
 
     .popup__close
         +below(1024px)
