--- a/markup/pages/popups/_layout.pug
+++ b/markup/pages/popups/_layout.pug
@@ -4,5 +4,6 @@ include ../../components/select-city-popup/select-city-popup
 include ../../components/auth-popup/auth-popup
 include ../../components/popup-welcome/popup-welcome
 include ../../components/filter/filter
+include ../../components/profile-video-popup/profile-video-popup
 
 block content
