--- a/markup/pages/popups/_layout.pug
+++ b/markup/pages/popups/_layout.pug
@@ -5,5 +5,6 @@ include ../../components/auth-popup/auth-popup
 include ../../components/popup-welcome/popup-welcome
 include ../../components/filter/filter
 include ../../components/profile-video-popup/profile-video-popup
+include ../../components/profile-photo-popup/profile-photo-popup
 
 block content
