--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -30,7 +30,7 @@ block content
             +demo-link('#profile-call')(data-popup-id='#profile-call' data-action='show').js-toggle-popup 02_card/call
             +demo-link('#profile-qr')(data-popup-id='#profile-qr' data-action='show').js-toggle-popup 02_card/QR
             +demo-link('#profile-report')(data-popup-id='#profile-report' data-action='show').js-toggle-popup 02_card/report(1,2)
-            +demo-link('#profile-photo')(data-popup-id='#profile-photo' data-action='show').js-toggle-popup 02_card/photo popup
+            +demo-link('#profile-photo')(data-popup-id='#profile-photo' data-popup-template='popups/profile-photo.html' data-action='show').js-toggle-popup 02_card/photo popup
             +demo-link('#profile-video')(data-popup-id='#profile-video' data-popup-template='popups/profile-video.html' data-action='show').js-toggle-popup 02_card/video popup
             +demo-link('agency-list.html') 03/List_agency_1
             +demo-link('agency.html') 03/List_agency_(2-3)
@@ -76,7 +76,6 @@ block content
     +arrow-up
 
 block popups
-    +profile-photo-popup
     +profile-common-popup-call
     +profile-common-popup-qr
     +profile-common-popup-report
