--- a/markup/components/profile-common-popup/profile-common-popup.pug
+++ b/markup/components/profile-common-popup/profile-common-popup.pug
@@ -5,6 +5,7 @@ include ../grid/grid
 include ../button/button
 include ../heading/heading
 include ../share/share
+include ../avatar/avatar
 include ../info-control/info-control
 
 mixin profile-common-popup(id)
