--- a/markup/pages/popups/_layout.pug
+++ b/markup/pages/popups/_layout.pug
@@ -6,5 +6,6 @@ include ../../components/popup-welcome/popup-welcome
 include ../../components/filter/filter
 include ../../components/profile-video-popup/profile-video-popup
 include ../../components/profile-photo-popup/profile-photo-popup
+include ../../components/profile-common-popup/profile-common-popup
 
 block content
