--- a/markup/components/profile-photo-popup/profile-photo-popup.pug
+++ b/markup/components/profile-photo-popup/profile-photo-popup.pug
@@ -32,7 +32,7 @@ mixin profile-photo-popup()
 
                     +e.links
                         +e.A(href='#' data-popup-id='#profile-qr' data-popup-template='popups/profile-qr.html' data-action='show').link.js-toggle-popup Share
-                        +e.A(href='#' data-popup-id='#profile-report' data-action='show').link.js-toggle-popup Report
+                        +e.A(href='#' data-popup-id='#profile-report' data-popup-template='popups/profile-report.html' data-action='show').link.js-toggle-popup Report
 
             +e.thumbs.swiper-container
                 +e.UL.thumbs-items.swiper-wrapper
