--- a/markup/components/user-profile/user-profile.pug
+++ b/markup/components/user-profile/user-profile.pug
@@ -57,7 +57,7 @@ mixin user-profile(isPopup, isEmpty)
                         +e.row._mob_padding._acts
                             +grid
                                 +col(4)
-                                    +button()(data-popup-id='#profile-report' data-action='show')._uppercase._border_standart.js-toggle-popup Report
+                                    +button()(data-popup-id='#profile-report' data-popup-template='popups/profile-report.html' data-action='show')._uppercase._border_standart.js-toggle-popup Report
                                 +col(4)
                                     +button()(data-popup-id='#profile-qr' data-popup-template='popups/profile-qr.html' data-action='show')._uppercase._border_standart.js-toggle-popup QR Code
                                 +col(4)
