--- a/markup/pages/popups/_layout.pug
+++ b/markup/pages/popups/_layout.pug
@@ -7,5 +7,6 @@ include ../../components/filter/filter
 include ../../components/profile-video-popup/profile-video-popup
 include ../../components/profile-photo-popup/profile-photo-popup
 include ../../components/profile-common-popup/profile-common-popup
+include ../../components/profile-popup/profile-popup
 
 block content
