--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -26,11 +26,11 @@ block content
             +demo-link('model-list-no-models.html') 01_List_1_no models
             +demo-link('model-list-search-result.html') 01_List_8_search 2
             +demo-link('model-list-help.html') 01_List_10_help
-            +demo-link('#profile-popup')(data-popup-id='#profile-popup' data-action='show').js-toggle-popup 02_card_1
+            +demo-link('#profile-popup')(data-popup-id='#profile-popup' data-popup-template='popups/profile-popup.html' data-action='show').js-toggle-popup 02_card_1
             +demo-link('#profile-call')(data-popup-id='#profile-call' data-popup-template='popups/profile-call.html' data-action='show').js-toggle-popup 02_card/call
             +demo-link('#profile-qr')(data-popup-id='#profile-qr' data-popup-template='popups/profile-qr.html' data-action='show').js-toggle-popup 02_card/QR
             +demo-link('#profile-report')(data-popup-id='#profile-report' data-popup-template='popups/profile-report.html' data-action='show').js-toggle-popup 02_card/report(1,2)
-            +demo-link('#profile-photo')(data-popup-id='#profile-photo' data-popup-template='popups/profile-photo.html' data-action='show').js-toggle-popup 02_card/photo popup
+            +demo-link('#profilet-photo')(data-popup-id='#profile-photo' data-popup-template='popups/profile-photo.html' data-action='show').js-toggle-popup 02_card/photo popup
             +demo-link('#profile-video')(data-popup-id='#profile-video' data-popup-template='popups/profile-video.html' data-action='show').js-toggle-popup 02_card/video popup
             +demo-link('agency-list.html') 03/List_agency_1
             +demo-link('agency.html') 03/List_agency_(2-3)
