--- a/markup/components/user-profile/user-profile.styl
+++ b/markup/components/user-profile/user-profile.styl
@@ -149,6 +149,9 @@
         &__label
             margin-right: 114px
 
+            +below(1100px)
+                margin-right 84px
+
             +below(768px)
                 margin-right: 0
                 margin-bottom: 24px
