--- a/markup/components/profile-popup/profile-popup.styl
+++ b/markup/components/profile-popup/profile-popup.styl
@@ -42,12 +42,12 @@
             display: block
 
     &__buttons
-        position fixed
-        top: 50%
+        position absolute
+        top: 50vh
         left: 0
         right: 0
-        width 100%
         transform: translateY(-50%)
+        width 100%
         display flex
         justify-content space-between
         z-index: 50
