--- a/markup/components/fill-profile-nav/fill-profile-nav.styl
+++ b/markup/components/fill-profile-nav/fill-profile-nav.styl
@@ -52,3 +52,6 @@
         &_close
             display none
             fill darkGreyColor
+
+            +above(1024px)
+                display none !important
