--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -28,10 +28,11 @@
         display: flex
         margin-top: 46px
 
+        +above(1024px)
+            display: flex !important
+
         +below(1023px)
             flex-direction: column
-
-        +below(768px)
             margin-top: 24px
 
     &__main
@@ -54,11 +55,22 @@
 
             .fill-profile-nav__item.active
                 position absolute
-                top 140px
+                top 177px
                 left 0
                 right 0
                 margin 0 31px
                 width auto
+
+                &.closed
+                    margin: 0
+                    position static
+
+                    .fill-profile-nav__icon_close
+                        display none
+
+        +below(768px)
+            .fill-profile-nav__item.active
+                top 140px
 
     &__masonry-item:not(:last-child)
         margin-bottom: 24px
@@ -81,9 +93,12 @@
             margin-bottom: 11px
 
         &:first-child
-            +below(1024px)
+            +below(1023px)
                 .heading
                     margin-bottom: 84px
+
+                    + *
+                        align-self: flex-start
 
         &:not(:first-child)
             margin-top: 40px
