--- a/markup/components/agency/agency.styl
+++ b/markup/components/agency/agency.styl
@@ -59,6 +59,10 @@
             +below(1024px)
                 padding: 30px
 
+            +below(768px)
+                padding-left 0
+                padding-right 0
+
         &_short
             +below(1024px)
                 padding: 0
@@ -72,6 +76,8 @@
 
                     +below(768px)
                         width: 100%
+                        padding-left: 0;
+                        padding-right: 0;
 
     &__col
         display: block
