--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -62,9 +62,10 @@
         +below(768px)
             width 100%
 
-    &__checkboxes .grid__col
-        +below(768px)
-            width 50%
+    &__checkboxes
+        .grid__col_two
+            +below(768px)
+                width 50% !important
 
     &_additional
 
