--- a/markup/components/model-list/model-list.styl
+++ b/markup/components/model-list/model-list.styl
@@ -7,6 +7,9 @@
             +above(1025px)
                 @extend .grid__col_three
 
+            +below(1024px)
+                width 50%
+
     .filter
         +below(1300px)
             //margin-top: 45px
