--- a/markup/components/photo-tape/photo-tape.styl
+++ b/markup/components/photo-tape/photo-tape.styl
@@ -18,6 +18,9 @@ photoTapeItemWidthMobile = 60px
         height: photoTapeItemWidth
         position: relative
 
+        &.active
+            z-index: 50
+
         +below(768px)
             width: photoTapeItemWidthMobile
             height: photoTapeItemWidthMobile
