--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -64,6 +64,7 @@
             justify-content: stretch
             align-items: stretch
             height: auto
+            min-height: 100%;
 
             .popup_mobile_only &
                 width 100%
