--- a/markup/components/profile-video-popup/profile-video-popup.styl
+++ b/markup/components/profile-video-popup/profile-video-popup.styl
@@ -5,6 +5,9 @@
     max-width: 915px
     width: auto
 
+    +below(915px)
+        max-width 100%
+
     .popup__close
         +below(1024px)
             position: absolute
