--- a/markup/components/map/map.styl
+++ b/markup/components/map/map.styl
@@ -69,6 +69,9 @@
         z-index: 112
         min-width: 258px
 
+        &:not(.active) + .scroll-wrapper
+            pointer-events: none !important
+
         +below(540px)
             top: 12px
             left: 12px
