--- a/markup/components/vip/vip.styl
+++ b/markup/components/vip/vip.styl
@@ -9,6 +9,9 @@
     text-decoration: none
     m-transition(all)
 
+    +below(400px)
+        min-height 300px
+
     &.preload
         opacity 0
         pointer-events none
@@ -36,6 +39,9 @@
         flex-direction: column
         justify-content: center
         flex: 1
+
+        +below(400px)
+            padding: 0
 
     &__icon
         display: flex
@@ -79,6 +85,9 @@
         border-top-color: rgba(borderColor, .08)
         flex-shrink: 0
         background-color: transparent
+
+        +below(400px)
+            padding: 0
 
         &::after
             display: none !important
