--- a/markup/components/registration/registration.pug
+++ b/markup/components/registration/registration.pug
@@ -57,7 +57,7 @@ mixin registration()
                     +field
                         +field-label Confirm password
                         +field-input(type='password')
-                +col(4).grid__col_push_bottom
+                +col(4).grid__col_push_bottom.registration__captcha
                     +captcha
 
                 +col(4).grid__col_push_center
