--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -156,6 +156,9 @@
         margin-top: 20px
         margin-left: 40px
 
+        +below(768px)
+            margin-left: 0
+
     &__label
         display: block
         color darkGreyColor
