--- a/markup/components/full-photo-popup/full-photo-popup.styl
+++ b/markup/components/full-photo-popup/full-photo-popup.styl
@@ -1,5 +1,6 @@
 .full-photo-popup
-    display: block
+    display: flex;
+    align-items: center;
 
     .popup__close {
         transform: translate(0, 0);
@@ -8,6 +9,6 @@
 
     &__img
         max-width: 100vw
-        max-height: 100vh
+        max-height: 80vh
         width: auto
         height: auto
