--- a/markup/components/image-bg/image-bg.pug
+++ b/markup/components/image-bg/image-bg.pug
@@ -1,3 +1,3 @@
 mixin image-bg(src)
     +b.image-bg&attributes(attributes)
-        img(src='__static__img/content/'+src)
+        img(src='static/img/content/'+src)
