--- a/markup/components/message/message.pug
+++ b/markup/components/message/message.pug
@@ -56,8 +56,8 @@ mixin message-custom-badge
 mixin message-custom-photos(photos)
     +e.photos&attributes(attributes)
         each src in photos
-            +e.photo(data-full='__static__img/content/photo-popup/gallery/1.jpg')
-                img(src='__static__img/content/'+src alt='')
+            +e.photo(data-full='static/img/content/photo-popup/gallery/1.jpg')
+                img(src='static/img/content/'+src alt='')
 
 mixin message-custom-reviews
     +b.reviews&attributes(attributes)
