--- a/markup/components/button/button.styl
+++ b/markup/components/button/button.styl
@@ -64,6 +64,9 @@
         border-width 0
         iziAnimation()
 
+        &.button_bg_main
+            iziAnimation(darkGreyColor, mainColor)
+
         svg
             transition: all .25s ease-in-out;
 
