--- a/markup/components/icon-button/icon-button.styl
+++ b/markup/components/icon-button/icon-button.styl
@@ -10,6 +10,9 @@
     border: 1px solid borderColor
     iziAnimation()
 
+    svg
+        transition: all .25s ease-in-out
+
     &_flex
         display: flex
         justify-content: center
