--- a/markup/components/model-list/model-list.styl
+++ b/markup/components/model-list/model-list.styl
@@ -100,14 +100,14 @@
             font-size 16px
             line-height 22px
 
-    .model-preview
-        +above(541px)
-            max-width none
+    // .model-preview
+    //     +above(541px)
+    //         max-width none
 
-    .boost
-        +above(541px)
-            max-width none
+    // .boost
+    //     +above(541px)
+    //         max-width none
 
-    .vip
-        +above(541px)
-            max-width none
+    // .vip
+    //     +above(541px)
+    //         max-width none
