--- a/markup/components/model-preview/model-preview.styl
+++ b/markup/components/model-preview/model-preview.styl
@@ -59,6 +59,13 @@
         position: relative !important
         display: block
 
+    &__slide
+        display inline-block
+
+    &__photos
+        display block
+        white-space nowrap
+
     &__cutoff
         position: absolute
         top: 0
