--- a/markup/components/file/file.styl
+++ b/markup/components/file/file.styl
@@ -40,6 +40,7 @@
         background-color: mainColor
         cursor pointer
         flex-shrink: 0
+        iziAnimation(darkGreyColor, mainColor)
 
     &__icon
         fill: #fff
