--- a/markup/components/input-selectlike/input-selectlike.styl
+++ b/markup/components/input-selectlike/input-selectlike.styl
@@ -26,6 +26,7 @@
     &__control
         padding: 0 20px
         width: 100%
+        max-width 100%
         background-color: transparent
         height: 60px
         border: 1px solid #e5e5e5
