--- a/markup/components/photo-tape/photo-tape.styl
+++ b/markup/components/photo-tape/photo-tape.styl
@@ -76,7 +76,7 @@ photoTapeItemWidthMobile = 60px
         right: 0
         transform: translateY(-100%)
         display: block
-        box-shadow: 0 4px 8px rgba(210, 163, 111, 0.3)
+        // box-shadow: 0 4px 8px rgba(210, 163, 111, 0.3)
         width: 100%
         height: 100%
         border-radius 0
