--- a/markup/components/update-avatar/update-avatar.styl
+++ b/markup/components/update-avatar/update-avatar.styl
@@ -34,6 +34,10 @@
         border: 0
         background-color: transparent
         cursor: pointer
+        transition color .25s ease
+
+        &:hover
+            color mainColor
 
         +below(520px)
             width: 100%
