--- a/markup/components/uploaded-photo/uploaded-photo.styl
+++ b/markup/components/uploaded-photo/uploaded-photo.styl
@@ -22,6 +22,9 @@
         font-weight 400
         line-height 1.375
         text-decoration: none
+        iziAnimation()
 
         &:not(:last-child)
             border-right: 1px solid borderColor
+
+
