--- a/markup/components/agency/agency.styl
+++ b/markup/components/agency/agency.styl
@@ -12,7 +12,7 @@
             padding-bottom: 24px;
 
         .image-bg
-            z-index: initial
+            z-index: 1
             height: 300px
             overflow hidden
 
@@ -23,6 +23,7 @@
             position: absolute
             top: -44px
             left: 0
+            z-index 1
 
             +below(580px)
                 position: static
