--- a/markup/components/footer/footer.styl
+++ b/markup/components/footer/footer.styl
@@ -3,6 +3,7 @@
     padding: 14px 0 60px 0
     background-color: darkGreyColor
     min-height: 345px
+    box-sizing content-box
 
     .logo:hover
         opacity: .75
