--- a/markup/components/profile-common-popup/profile-common-popup.styl
+++ b/markup/components/profile-common-popup/profile-common-popup.styl
@@ -51,7 +51,7 @@
     .image-bg
         width: 100%
         height: 347px
-        z-index: initial
+        z-index: 1
 
     &__col
         display: flex
