--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -83,7 +83,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 }
 
 *, *::before, *::after {
-    box-sizing content-box
+    box-sizing: inherit;
 }
 
 img {
