--- a/markup/components/profile-photo-popup/profile-photo-popup.styl
+++ b/markup/components/profile-photo-popup/profile-photo-popup.styl
@@ -204,7 +204,7 @@
                     opacity: 1
 
         .image-bg
-            z-index: initial
+            z-index: 1
             width: 100%
             height: 100%
             m-transition(opacity)
